refactor .getTeachersByCriteria to use Stream.collect()